engine/tests/detection_corpus/bad/secret_slack_webhook.js
const url = "__CORPUS_SECRET__";
